k8s/golang-hello-world-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-hello-world-web
  labels:
    app: golang-hello-world-web
spec:
  selector:
    matchLabels:
      app: golang-hello-world-web
  # kubectl scale --replicas=x deployment/golang-hello-world-web
  replicas: 1
  template:
    metadata:
      labels:
        app: golang-hello-world-web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - golang-hello-world-web
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: golang-hello-world-web
          image: ghcr.io/andriykalashnykov/golang-web:0.0.4@sha256:a7df346e99381d8cdee80e55718aa6ff43a3c61f46184bd420dcae6640c69eec
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "5m"
              memory: "4Mi"
            limits:
              cpu: "10m"
              memory: "8Mi"
          
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3

      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: golang-hello-world-web-service
  labels:
    app: golang-hello-world-web
spec:
  type: ClusterIP
  ports:
    # port=available to other containers
    - port: 8080
      name: http
      # targetPort=exposed from inside container
      targetPort: 8080
      protocol: TCP
  selector:
    app: golang-hello-world-web
