k8s/helloweb-deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
        - name: hello-app
          image: localhost:5001/hello-app:2.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "64Mi"
            limits:
              cpu: "400m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  labels:
    app: hello
    tier: web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello
    tier: web
