k8s/helloweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
        - name: hello-app
          image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0@sha256:9b987009d04eb8f9ad3cc525a8e668ce985ce83fec015180a0619396127993fa
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "1m"
              memory: "6Mi"
            limits:
              cpu: "3m"
              memory: "8Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  labels:
    app: hello
    tier: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello
    tier: web
